<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controllers.positions.NewPositionActivity">

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_gps"
        android:inputType="textWebEmailAddress"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Foto de Fachada" />

    <ImageView
        android:id="@+id/img_fachada"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"

        />
    <Button
        android:id="@+id/btn_open_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Open Gallery"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_position"
        android:textSize="24sp" />


</LinearLayout>