<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controllers.deliveries.ShowDeliveryActivity">

    <TextView
        android:id="@+id/viewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_name" />

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewName"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewTelephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_phone" />

    <EditText
        android:id="@+id/txt_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewTelephone"
        android:inputType="phone"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_email" />

    <EditText
        android:id="@+id/txt_edad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewEmail"
        android:inputType="number"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sexo:" />

    <EditText
        android:id="@+id/txt_sexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewSexo"
        android:inputType="text"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:textSize="24sp" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@drawable/ic_delete" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabClone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@drawable/ic_clone" />

</LinearLayout>